# book-to-skill

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  MYCELIA.md  README.md  RELEASE.md  ROADMAP.md  SKILL.md  pyproject.toml
.claude/skills/shred-book/: SKILL.md
.github/workflows/: ci.yml
docs/: api.rst  architecture.rst  conf.py  index.rst  mycelia-productization.md  requirements.txt
examples/: README.md
examples/demo-output/mycelia-vault/: .mycelia.json  SCHEMA.md  index.md  log.md
examples/demo-output/mycelia-vault/anti-patterns/: assert-for-runtime-validation.md  bare-except.md  eval-exec-on-untrusted-input.md  index.md  mutable-default-argument.md  rubber-stamping-large-diff.md  sql-string-concatenation.md
examples/demo-output/mycelia-vault/concepts/: code-review.md  index.md  sql-injection.md
examples/demo-output/mycelia-vault/entities/: index.md  python.md
examples/demo-output/mycelia-vault/frameworks/: index.md  review-for-intent.md  the-reviewers-charter.md
examples/demo-output/mycelia-vault/methods/: guard-clause.md  index.md
examples/demo-output/mycelia-vault/moc/: index.md  python-code-review.md
examples/demo-output/mycelia-vault/principles/: index.md  small-diffs.md
examples/demo-output/mycelia-vault/raw/python-code-review/: metadata.json
examples/demo-output/mycelia-vault/references/: index.md  python-code-review.md
examples/demo-output/python-code-review-skill/: .book-to-skill.json  SKILL.md  cheatsheet.md  cues.md  glossary.md  patterns.md  review-rules.md
examples/demo-output/python-code-review-skill/.source/: full_text.txt  metadata.json
examples/demo-output/python-code-review-skill/chapters/: ch01-the-code-review-mindset.md  ch02-security-anti-patterns.md  ch03-maintainability-patterns.md
scripts/: extract.py
scripts/bookextract/: __init__.py  assemble.py  batch.py  chunking.py  clean.py  cli.py  cover.py  dedupe.py  deps.py  eval.py  extractors.py  formats.py  metadata.py  notes.py  okf_lint.py  pageoffset.py  pipeline.py  progress.py  qa.py  reconcile.py  runner.py  structure.py  types.py  upgrade.py
tests/: test_assemble.py  test_batch.py  test_chunking.py  test_clean.py  test_cover.py  test_dedupe.py  test_eval.py  test_extract.py  test_figures.py  test_notes.py  test_okf_lint.py  test_pageoffset.py  test_personalize.py  test_qa.py  test_reconcile.py  test_runner.py  test_upgrade.py
