# Project + tooling configuration for Mycelia (repo: book-to-skill).
#
# This repo is two things:
#   1. The *generators* — prose recipes Claude reads to turn a document into either:
#        - `MYCELIA.md` → an atomic, interlinked OKF knowledge vault (the default), or
#        - `SKILL.md`   → a single-book Claude Code skill (legacy).
#      These are the primary, install-free interfaces and are NOT Python entry points.
#   2. The *extractor/upgrader/linter* — the `bookextract` package under `scripts/`,
#      exposed as the `book-extract` console script. It extracts text from a
#      document, upgrades already-generated skills, and lints OKF vault bundles
#      (`book-extract lint <bundle>`).
#
# The [project] table below makes (2) installable with `uv`/pip. Runtime
# extractors (docling, pypdf, ebooklib, …) stay OPTIONAL extras — the package
# discovers and falls back across whatever is installed (see bookextract/deps.py),
# so the base install pulls no heavy dependencies.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mycelia"
description = "Turn any book or document into an atomic, interlinked OKF knowledge vault (or a legacy single-book Claude Code skill) — grounded, portable, and built to scale across hundreds of books."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [{ name = "strawberry-code" }]
keywords = [
    "agent-skills",
    "claude-code",
    "github-copilot",
    "pdf-to-skill",
    "knowledge-extraction",
    "ai-coding-assistant",
    "technical-books",
    "long-context",
    "rag-alternative",
    "docling",
    "okf",
    "open-knowledge-format",
    "knowledge-vault",
    "zettelkasten",
    "second-brain",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
]
# The generator version is the single source of truth in
# scripts/bookextract/__init__.py (__version__); hatch reads it below.
dynamic = ["version"]
# No required runtime dependencies: extractors are optional (see extras).
dependencies = []

[project.urls]
Homepage = "https://github.com/strawberry-code/book-to-skill"
Repository = "https://github.com/strawberry-code/book-to-skill"
Changelog = "https://github.com/strawberry-code/book-to-skill/blob/master/CHANGELOG.md"
Issues = "https://github.com/strawberry-code/book-to-skill/issues"

[project.scripts]
# Extracts text + upgrades skills. Skill *generation* is the /book-to-skill
# slash command, not this script.
book-extract = "bookextract.cli:main"

# Optional extractors, mirroring the import→pip map in bookextract/deps.py.
# Install only what your source formats need, e.g. `uv sync --extra docling`.
[project.optional-dependencies]
pdf = ["pypdf", "pdfminer.six"]
epub = ["ebooklib", "beautifulsoup4"]
docx = ["python-docx"]
html = ["beautifulsoup4"]
rtf = ["striprtf"]
mobi = ["mobi"]
docling = ["docling"]
rich = ["rich"]
all = [
    "pypdf",
    "pdfminer.six",
    "ebooklib",
    "beautifulsoup4",
    "python-docx",
    "striprtf",
    "mobi",
    "docling",
    "rich",
]
# mypy is pinned <2: the package targets the 1.x strict checker; mypy 2.x
# tightens `no-any-return`/`unused-ignore` and flags the optional-extractor
# adapter boundaries that 1.x accepts.
dev = ["ruff", "mypy>=1.19,<1.20", "pytest", "lizard", "xenon", "pre-commit"]

[tool.hatch.version]
path = "scripts/bookextract/__init__.py"
# __version__ carries a `: Final[str]` annotation, which the default regex rejects.
pattern = "__version__(?:\\s*:[^=]+)?\\s*=\\s*['\"](?P<version>[^'\"]+)['\"]"

[tool.hatch.build.targets.wheel]
# Package lives under scripts/; it imports as `bookextract`.
packages = ["scripts/bookextract"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["scripts"]

[tool.ruff.lint]
# E,F,W=pyflakes/pycodestyle · I=isort · N=naming · UP=pyupgrade · B=bugbear
# C901=mccabe complexity · ANN=annotations · BLE=blind-except · PLR=pylint-refactor
# SIM=simplify · RET=return · PTH=pathlib · TID=tidy-imports
select = ["E", "F", "W", "I", "N", "UP", "B", "C901", "ANN", "BLE", "PLR", "SIM", "RET", "PTH", "TID"]
# Severe semantic-LOC ceilings live in mccabe/pylint below; PLR2004 (magic
# values) and BLE001 (blind except) are intentionally kept ON as hard rules.
ignore = [
    "ANN401",  # allow `object` in adapter boundaries where third-party types are unknown
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 4
max-branches = 8
max-returns = 6

[tool.ruff.lint.per-file-ignores]
# Tests prioritize readability over the production ruleset: untyped fixtures,
# asserts, magic numbers, and private-symbol access are all expected here.
"tests/**" = ["ANN", "PLR2004", "PLR0913", "N802", "B011", "SIM"]
# The entrypoint shell must mutate sys.path before importing the package.
"scripts/extract.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
mypy_path = "scripts"
strict = true
warn_unused_ignores = true
files = ["scripts/bookextract"]

# Optional third-party extractors ship without type stubs; treat them as Any
# rather than failing the strict gate on missing imports.
[[tool.mypy.overrides]]
module = ["docling.*", "ebooklib.*", "ebooklib", "pdfminer.*", "striprtf.*", "bs4", "docx", "pypdf", "PyPDF2", "rich.*", "mobi", "mobi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
